[gd_scene load_steps=4 format=3 uid="uid://cy2adls76miy2"]

[ext_resource type="Script" path="res://diadem/ui/losewin.gd" id="1_4kv5a"]
[ext_resource type="Texture2D" uid="uid://cuxmu7t1ongpn" path="res://diadem/diadem-png/win.png" id="1_h8gpi"]
[ext_resource type="Texture2D" uid="uid://ch2il5xj07e48" path="res://diadem/diadem-png/lose.png" id="3_d7ogn"]

[node name="losewin" type="CanvasLayer"]
process_mode = 3
script = ExtResource("1_4kv5a")

[node name="win" type="Control" parent="."]
visible = false
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2

[node name="TextureRect" type="TextureRect" parent="win"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -254.0
offset_top = -185.0
offset_right = 259.0
offset_bottom = 88.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_h8gpi")

[node name="HBoxContainer" type="HBoxContainer" parent="win"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -208.0
offset_top = 80.0
offset_right = 221.0
offset_bottom = 128.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 14

[node name="play_again" type="Button" parent="win/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Play again"

[node name="home" type="Button" parent="win/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Home"

[node name="lose" type="Control" parent="."]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2

[node name="TextureRect" type="TextureRect" parent="lose"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -255.0
offset_top = -239.0
offset_right = 257.0
offset_bottom = 81.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("3_d7ogn")
expand_mode = 1

[node name="HBoxContainer" type="HBoxContainer" parent="lose"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -208.0
offset_top = 80.0
offset_right = 221.0
offset_bottom = 128.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 14

[node name="play_again1" type="Button" parent="lose/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Play again"

[node name="home1" type="Button" parent="lose/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Home"

[node name="reason" type="Label" parent="lose"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 4.6
anchor_right = 0.5
anchor_bottom = 4.6
offset_left = -21.0
offset_top = -5.00002
offset_right = 35.0
offset_bottom = 18.0
grow_horizontal = 2
grow_vertical = 0
theme_override_colors/font_color = Color(0.752941, 0, 0, 1)
theme_override_font_sizes/font_size = 30
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="pressed" from="win/HBoxContainer/play_again" to="." method="_on_play_again_pressed"]
[connection signal="pressed" from="win/HBoxContainer/home" to="." method="_on_home_pressed"]
[connection signal="pressed" from="lose/HBoxContainer/play_again1" to="." method="_on_play_again_1_pressed"]
[connection signal="pressed" from="lose/HBoxContainer/home1" to="." method="_on_home_1_pressed"]
